--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -1,7 +1,7 @@
 name: Dependabot_workflow
 on:
   schedule:
-    - cron: '0 0 * * *' # Exécuter tous les jours à minuit
+    - cron: '0 0 * * *'
 jobs:
   dependabot:
     runs-on: ubuntu-latest
