--- a/.github/workflows/dependabot-workflow.yaml
+++ b/.github/workflows/dependabot-workflow.yaml
@@ -1,12 +1,8 @@
 name: Dependabot
 
-
-
 on:
   schedule:
     - cron: '0 0 * * *'
-
-
 jobs:
   dependabot:
     runs-on: ubuntu-latest
@@ -16,7 +12,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.17
+          go-version: "1.17"
       - name: Dependabot
         uses: dependabot/dependabot-action@v2
         with:
