test de réglage du pb de version dans lint

--- a/.github/workflows/lint-workflow.yaml
+++ b/.github/workflows/lint-workflow.yaml
@@ -18,8 +18,8 @@ jobs:
     steps:
       - name: launching of hadolint
         uses: hadolint/hadolint@v2
-        #with:
-        #  dockerfile: Dockerfile
+        with:
+          dockerfile: Dockerfile
   super_linter:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
