--- a/.github/workflows/lint-workflow.yaml
+++ b/.github/workflows/lint-workflow.yaml
@@ -4,7 +4,7 @@ on:
   push:
   workflow_dispatch:
 jobs:
-  static_analysis:
+  static_analysis + docker_analysis + super_linter:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -13,18 +13,14 @@ jobs:
         uses: returntocorp/semgrep-action@v1
         with:
           config: "p/default"
-  docker_analysis:
-    runs-on: ubuntu-latest
-    steps:
+
       - name: launching of hadolint
         uses: hadolint/hadolint@v3.1.0
         with:
           dockerfile: Dockerfile
-  super_linter:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    steps:
+          
       - name: launching of super-linter
+        if: github.event_name == 'pull_request'
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: true
