--- a/.github/workflows/release-workflow.yaml
+++ b/.github/workflows/release-workflow.yaml
@@ -1,61 +1,52 @@
-name: Release workflow
+name: Release Workflow
 on:
   push:
     tags:
-      - "*.*.*"
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  YOUR_REPOSITORY: 4dvp-repository # the name of the repository on the docker hub
+      - '*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      actions: write
-      checks: write
-      contents: write
-      deployments: write
-      id-token: write
-      issues: write
-      pull-requests: write
-      repository-projects: write
-      security-events: write
-      statuses: write
+     actions: write
+     checks: write
+     contents: write
+     deployments: write
+     id-token: write
+     issues: write
+     pull-requests: write
+     repository-projects: write
+     security-events: write
+     statuses: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup go
+      - uses: actions/checkout@v3
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: stable
-
-      - name: Installation of goreleaser
-        run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh -s -- -b $(go env GOPATH)/bin
-      
-      - name: Build and release
+      - name: Build and Release
         uses: goreleaser/goreleaser-action@v4
+        if: success() && startsWith(github.ref, 'refs/tags/')
         with:
-          version: ${{ github.ref }}
-          args: release --rm-dist
-          #args: release --clean
-
-      - name: Set up qemu
-        uses: docker/setup-qemu-action@v2 
-
-      - name: Set up docker buildx
-        uses: docker/setup-buildx-action@v2 
-
-      - name: Login on dockerhub
-        uses: docker/login-action@v3
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build a dockerImage and push on dockerHub
-        uses: docker/build-push-action@v3
+      - name: Build And Publish Image
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ env.DOCKERHUB_USERNAME }}/${{ env.YOUR_REPOSITORY }}:${{ github.ref_name }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/4dvp-repository:${{  github.ref_name }}
