pb v2 version hadolint

--- a/.github/workflows/lint-workflow.yaml
+++ b/.github/workflows/lint-workflow.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: launching of hadolint
         uses: docker://hadolint/hadolint:v2.7.0
         with:
-          entrypoint: /bin/hadolint
+          #entrypoint: /bin/hadolint
           dockerfile: Dockerfile
 
       - name: launching of super-linter
