--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -49,4 +49,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/4dvp-repository:${{  github.ref_name }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/4dvp-repository:${{  github.ref }}
