--- a/.github/workflows/lint-workflow.yaml
+++ b/.github/workflows/lint-workflow.yaml
@@ -1,28 +1,36 @@
-name: Lint workflow2
+name: Lint workflow
 on:
   pull_request:
   push:
   workflow_dispatch:
 jobs:
-  Lint_workflow:
+  static_analysis:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: launching of semgrep
         uses: returntocorp/semgrep-action@v1
         with:
           config: "p/default"
-
+    
+  docker_analysis:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: launching of hadolint
         uses: docker://hadolint/hadolint:v2.7.0
         with:
-          #entrypoint: /bin/hadolint
           dockerfile: Dockerfile
 
+  super_linter:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: launching of super-linter
-        if: github.event_name == 'pull_request'
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: true
