--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,12 +8,14 @@ updates:
   - package-ecosystem: "gomod" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
-    allow: 
-      - dependency-type: "direct" 
-        update-type: "semver:minor" # for mise à jour
+      #interval: "daily"
+      interval: "hour"
+    #allow: 
+    #  - dependency-type: "direct" 
+    #    update-type: "semver:minor" # for allow minor updates
 
   - package-ecosystem: "docker" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      #interval: "daily"
+      interval: "hour"
