--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,9 +6,9 @@
 version: 2
 updates:
   - package-ecosystem: "gomod" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directory: "/" # Location of package manifests 
     schedule:
-      #interval: "daily"
+      #interval: "daily" test
       interval: "hour"
     #allow: 
     #  - dependency-type: "direct" 
