--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build and release
         uses: goreleaser/goreleaser-action@v4
         with:
-          version: ${{ github.ref }}
+          version: latest
           args: release --rm-dist
           #args: release --clean
 
@@ -53,7 +53,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build a dockerImage and push on dockerHub
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile
