--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,12 +8,11 @@ updates:
   - package-ecosystem: "gomod" # See documentation for possible values
     directory: "/" # Location of package manifests 
     schedule:
-      #interval: "daily" test
-      #interval: "hours"
-      interval: "1 minute"
+      interval: "daily"
+
   - package-ecosystem: "docker" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      #interval: "daily"
-      #interval: "hours"
-      interval: "1 minute"
+      interval: "daily"
+
+
